--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -11,7 +11,9 @@
 	    <dimen name="status_bar_height_default">104px</dimen>
 	        <dimen name="status_bar_height_landscape">78px</dimen>
 		    <dimen name="status_bar_height_portrait">@dimen/status_bar_height_default</dimen>
+    <!-- Radius of the software rounded corners of the display in it's natural orientation-->
+    <dimen name="rounded_corner_radius">126px</dimen>
 
-		        <!-- Radius of the software rounded corners of the display in it's natural orientation-->
-		        <dimen name="rounded_corner_radius">96px</dimen>
-		</resources>
+    <!-- Adjustment for software rounded corners since corners aren't perfectly round. -->
+    <dimen name="rounded_corner_radius_adjustment">30px</dimen>
+</resources>
