--- a/overlay/SystemUIResOverlayRenoir/res/values/dimens.xml
+++ b/overlay/SystemUIResOverlayRenoir/res/values/dimens.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
--->      Copyright (C) 2021 The LineageOS Project
+Copyright (C) 2021 The LineageOS Project
 
-     SPDX-License-Identifier: Apache-2.0
+SPDX-License-Identifier: Apache-2.0
 -->
 
 <resources>
